重构文件管理，增加文件向量化控制相关功能

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -145,3 +145,6 @@ management:
 jwt:
   secret: "ThisIsMyVeryLongAndSecureSecretKeyForTestingPurposesOnly123"
   expiration: 86400 # Token有效期（秒），这里是24小时
+
+file:
+  upload-dir: ./upload-dir
